# aware-repo

./: .gitignore  Dockerfile  README.md  README.rst  RELEASE_NOTES  aware.yaml  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  sorted_targets.csv  sorted_targets.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_linux_wheel.yml  bump_version.yml
aware/: __init__.py  __main__.py  __version__.py  alert.py  angle.py  app.py  cache.py  config.py  consumer.py  cosmology.py  credentials.py  data.py  field.py  io.py  json.py  logger.py  path.py  planner.py  plugin.py  service.py  socket.py  sql.py  topic.py  util.py  voevent.py
aware/alert/: __init__.py  alert.py  crossmatch.py  parser.py  target_info.py  util.py
aware/alert/plugins/: __init__.py  ep.py  gbm.py  icecube.py  integral.py  lat.py  lvc.py  maxi.py  swift.py
aware/consumer/: __init__.py  main.py
aware/glade/: main.py
aware/localization/: __init__.py  main.py
aware/planner/: __init__.py  main.py  mosaic.py  observation.py  program.py
aware/planning/: __init__.py  distributor.py  main.py  mosaic.py  observation.py  planner.py  program.py
aware/scripts/: aware-visibility-plot.py  aware_echo_client.py  aware_mosaic_planner.py  aware_nearest_night.py  aware_skymap_plot.py  aware_sort_targets.py
aware/site/: __init__.py  main.py  observation.py
aware/sql/: __init__.py  models.py  util.py
aware/telegram/: __init__.py  bot.py  decorator.py  main.py  subscribe.py  util.py
aware/telegram/callbacks/: callback.py  startup.py
aware/telegram/dialogs/: __init__.py  setup.py  subscribe.py
aware/telegram/handlers/: __init__.py  findchart.py  id.py  mysettings.py  retry.py  setup.py  sites.py  status.py  subscribe.py  topics.py  unsubscribe.py  visibility.py
aware/visualization/: __init__.py  find_chart.py  main.py
dev/: development.md
output/: aware.yaml
playground/: order_targets.ipynb  planner.ipynb  plot_airmass.ipynb
tests/: conftest.py  event.xml  test_alert_crossmatch.py  test_alert_plugins.py  test_app.py  test_astroplanner.py  test_async_consume.py  test_dialog.py  test_encrypt_sql.py  test_ep.py  test_find_chart.py  test_gbm_parser.py  test_gcn_consumer_first_run.py  test_glade_plus.py  test_icecube_parser.py  test_integral_parser.py  test_logger.py  test_lvk_parser.py  test_maxi_parser.py  test_mosaic_sorter.py  test_objlist.py  test_parse_alert.py  test_plots.py  test_render_number_as_rich_utf8.py  test_retrieve_available_topics.py  test_site_json_plugin.py  test_subscriber_sql.py  test_swift_parser.py
tests/alert_messages/: bat_alert_grb230228a.xml  gbm_alert.xml  gw_event.xml  icecube_bronze.xml  icecube_cascade.xml  icecube_nu_em_coinc.xml  integral_weak.xml  maxi_known.xml  xrt_alert_1165948.xml  xrt_alert_1165948_acc.xml
tests/site_plugins/: test_site.json
tests/skymaps/: bayestar.multiorder.fits,0
tools/: __init__.py  bump_version.sh  get_version.sh  notify_subs.py  socket_client.py
